Tue Oct 29 18:37:33 2013  Koichi Sasada  <ko1@atdot.net>

	* include/ruby/ruby.h: introduce new flags for T_TYPEDDATA.
	  * RUBY_TYPED_FREE_IMMEDIATELY: free the data given by DATA_PTR()
	    with dfree function immediately.  Otherwise (default), the data
	    freed at finalizaton point.
	  * RUBY_TYPED_WB_PROTECTED: make this object with FL_WB_PROTECT
	    (not shady).

	* gc.c (obj_free): support RUBY_TYPED_FREE_IMMEDIATELY.

Tue Oct 29 16:49:03 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (vm_malloc_increase): decrease it more carefully.

Tue Oct 29 16:24:52 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (heap_page_resurrect): return a page in tomb heap even if
	  freelist is NULL.

Tue Oct 29 15:46:30 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby_atomic.h (ATOMIC_SIZE_CAS): new macro, compare and swap size_t.

Tue Oct 29 12:08:05 2013  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c (readline_getc): Consider
	  NULL as input.

Tue Oct 29 11:10:08 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_profile_total_time): fix off-by-one error in
	  GC::Profiler.total_time.
	* test/ruby/test_gc.rb (class TestGc): test for above.

Tue Oct 29 09:53:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* insns.def, vm.c, vm_insnhelper.c, vm_insnhelper.h, vm_method.c: split
	  ruby_vm_global_state_version into two separate counters - one for the
	  global method state and one for the global constant state. This means
	  changes to constants do not affect method caches, and changes to
	  methods do not affect constant caches. In particular, this means
	  inclusions of modules containing constants no longer globally
	  invalidate the method cache.

	* class.c, eval.c, include/ruby/intern.h, insns.def, vm.c, vm_method.c:
	  rename rb_clear_cache_by_class to rb_clear_method_cache_by_class

	* class.c, include/ruby/intern.h, variable.c, vm_method.c: add
	  rb_clear_constant_cache

	* compile.c, vm_core.h, vm_insnhelper.c: rename vmstat field in